# Hotel-Manager-App

./: .gitignore  .~lock.Hotels-Sheet1.csv#  .~lock.Hotels_new_edition - Hotels.csv#  CMakeLists.txt  Exception.hpp  Hotel.hpp  Hotels - Sheet1.csv  Hotels-Sheet1.csv  Hotels.csv  README.md  Reservation_time.hpp  Room.hpp  Room_service.hpp  Tools.cpp  Tools.hpp  UTRIP.out  a.out  constants.hpp  hotels.csv  input  main.cpp  makefile  utrip.out
includes/: City.hh  CommandHandler.hh  CommandHandler.hpp  Constants.hh  Exception.hh  Exception.hpp  Filter.hh  Hotel.hh  Hotel.hpp  HotelManager.h  HotelManager.hh  HotelRatings.hh  Interface.h  Interface.hh  Location.hh  RatingCategoryWeightEstimator.hh  RatingsManager.hh  Request.hh  Reservation_time.hpp  Room.h  Room.hh  Room.hpp  RoomService.hh  RoomService.hpp  Room_service.hpp  Sort.hh  Tools.hh  Tools.hpp  User.h  User.hh  UserManager.h  UserManager.hh  Utility.hh  Utrip.h  Utrip.hh  Wallet.hpp  constants.hpp
src/: CommandHandler.cpp  Filter.cpp  Hotel.cpp  HotelManager.cpp  HotelRatings.cpp  Interface.cpp  Main.cpp  RatingCategoryWeightEstimator.cpp  RatingsManager.cpp  Room.cpp  RoomService.cpp  Room_service.cpp  Sort.cpp  Tools.cpp  User.cpp  UserManager.cpp  Utility.cpp  Utrip.cpp  Wallet.cpp
test/: Main.cpp  TestSignup.cpp  fixture.hh  testSignup.cc
testcases/: out.out  public_test.in  public_test.out
testcases/in/: 1.in  10.in  11_NEEDWORK.in  11_NeedWork.in  12.in  13.in  14.in  14_NEEDWORK.in  15.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  8__NEEDSWORK.in  9.in
testcases/phase2/default_price_filter/: 1.out  2.out  3.out  4.out  5.out  6.out  7.out
testcases/phase2/personal_rating/: 10.out  2.out  8.out  9.out
testcases/phase2/sort/: 1.out  2.out  3.out  4.out
testcases/phase2/weight_estimation/: 1.out  3.out  4.out  5.out  6.out  actual_weights.txt
